--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -21,7 +21,7 @@
                 <TextView android:id="@+id/budget_balance_amount_tv" style="@style/main_money_hdpi" android:textColor="@color/white"/>
             </LinearLayout>
         </LinearLayout>
-        <com.uangel.suishouji.utility.MyProcessBar
+        <com.bci.utility.MyProcessBar
 			android:id="@+id/budget_pb" android:layout_width="87.0px" android:paddingTop="34.0px" android:layout_gravity="center_horizontal" android:gravity="bottom"
         	android:layout_height="212.0px" android:layout_marginLeft="18.0px">
 				</com.uangel.suishouji.utility.MyProcessBar> 
